# modeler

./: README.md
server/: .gitignore  Cargo.toml  Makefile  README.md  compose.yaml
server/docker/diesel/: Dockerfile
server/migrations/2024-06-30-230857_foo/: up.sql
server/migrations/2024-07-03-000636_create_project/: up.sql
server/migrations/2024-07-03-000648_create_page/: down.sql  up.sql
server/migrations/2024-07-03-000701_create_project_node/: down.sql  up.sql
server/migrations/2024-07-03-002022_create_page_node/: down.sql  up.sql
server/migrations/2024-07-12-005438_create_project_edge/: down.sql  up.sql
server/migrations/2024-07-12-032827_create_page_edge/: down.sql  up.sql
server/migrations/2024-07-12-044434_create_node_icon/: down.sql  up.sql
server/migrations/2024-08-18-025100_create_user/: up.sql
server/migrations/2024-08-18-025220_create_user_config/: down.sql  up.sql
server/migrations/2024-08-29-044311_create_user_project/: down.sql  up.sql
server/src/: logger.rs  main.rs  schema.rs  server.rs  session.rs
server/src/actor/: mod.rs  server.rs  session.rs
server/src/actor/message/: connect.rs  disconnect.rs  lock.rs  mod.rs  unlock.rs
server/src/controller/: auth.rs  debug_controller.rs  log.rs  mod.rs  page_controller.rs  page_object_controller.rs  project_controller.rs  project_object_controller.rs  user_controller.rs  user_project_controller.rs  user_project_page_controller.rs
server/src/controller/node/: mod.rs  (+3 more)
server/src/data/: edge.rs  mod.rs  node.rs  page.rs  project.rs  user.rs
server/src/db/: mod.rs  schema.rs
(+473 files in other folders)
