[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
bytestring = "1.3.1"
diesel = { version = "2.1.5", features = ["mysql", "r2d2"] }
dotenvy = "0.15.7"
itertools = "0.12.1"
r2d2 = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4"] }

